# pacman-clone

./: .clang-tidy  CMakeLists.txt
.github/workflows/: build.yml  format.yml
src/: CMakeLists.txt
src/pacman/: CMakeLists.txt
src/pacman/include/component/: player_controller.h  sprite_renderer.h  transform.h
src/pacman/include/core/: factory.h  game.h
src/pacman/include/core/res/: cache.h  cache_manager.h  loader.h
src/pacman/include/system/: player.h  renderer.h
src/pacman/src/: main.cpp
src/pacman/src/component/: sprite_renderer.cpp
src/pacman/src/core/: factory.cpp  game.cpp
src/pacman/src/system/: player.cpp  renderer.cpp
